# cpp-webkit-style-practice-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  _CMakePresets.json
app/: CMakeLists.txt
app/res/hello/: CMakeLists.txt
app/src/: CMakeLists.txt  main.cpp
cmake/: AddGitSubmodule.cmake
lib/my_lib/: CMakeLists.txt
